tests/fixtures/syntax/valid/assertion_block.repor
case "assertion block" {
  assert {
    exit 0
  }
}
