tests/fixtures/syntax/invalid/assertion_without_block.repor
case "bare assert" {
  $ true
  assert exit 0
}
